--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -31,19 +31,19 @@
         >
             <ul class="flex flex-col mt-4 md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium">
                 <li>
-                    @if (!isAuthenticated) {
-                        <a
-                                (click)="login()"
-                                class="block py-2 pr-4 pl-3 text-gray-700 hover:bg-gray-50 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">
-                            Login
-                        </a>
+                    @if (isAuthenticated) {
+                      <p class="text-white">Hi {{ username }}</p>
+                      <a
+                        (click)="logout()"
+                        class="block py-2 pr-4 pl-3 text-gray-700 hover:bg-gray-50 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">
+                        Logout
+                      </a>
                     } @else {
-                        <p class="text-white">Hi {{ username }}</p>
-                        <a
-                                (click)="logout()"
-                                class="block py-2 pr-4 pl-3 text-gray-700 hover:bg-gray-50 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">
-                            Logout
-                        </a>
+                      <a
+                        (click)="login()"
+                        class="block py-2 pr-4 pl-3 text-gray-700 hover:bg-gray-50 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">
+                        Login
+                      </a>
                     }
                 </li>
             </ul>
